--- a/eugene/doc/Doc_PepSignal.tex
+++ b/eugene/doc/Doc_PepSignal.tex
@@ -6,10 +6,7 @@
 \paragraph{Description}
 This plugin injects possible translation starts as predicted by the Predotar
  program (http://genoplante-info.infobiogen.fr/predotar/) that looks for 
-peptide adressing sequences after every occurrence of an ATG. The plugin reads 
-the predictions (both in forward and reverse strand) of the program 
-from a file whose name is derived 
-from the sequence name by adding the \texttt{.psignal} suffix.
+peptide adressing sequences after every occurrence of an ATG. 
 
 The sensor is activated by setting the value \texttt{1} for the parameter
 \texttt{Sensor.PepSignal.use} in the parameter file. The score for start
@@ -25,7 +22,11 @@ Sensor.PepSignal        10      # Sensor priority
 \end{Verbatim}
 
 
-\paragraph{Input files format}
+\paragraph{Native input files format}
+The plugin reads 
+the predictions (both in forward and reverse strand) of the program 
+from a file whose name is derived 
+from the sequence name by adding the \texttt{.psignal} suffix.
 
 The file \texttt{.psignal} describes the predicted start sites
 sorted by position on the sequence (as given by Predotar).
@@ -45,6 +46,23 @@ This file can be obtained by launching the Predotar software
 available at\\
 \texttt{http://genoplante-info.infobiogen.fr/predotar/predotar.html}
 
+\paragraph{Gff3 input file format}
+The gff3 input mode is activated by setting the value \texttt{GFF3} for the parameter
+\texttt{PepSignal.format} in the parameter file.
+The plugin reads the predictions of the program from one file which
+name is derived from the sequence name by adding the \texttt{.psignal.gff3}
+
+Accepted features (third column) :
+\begin{itemize}
+\item  SO:0000318 or start\_codon
+\end{itemize}
+If feature isn't this, line would be rejected. The expected coordinates must correspond to the first nucleotide of the start codon.
+
+Here an extract of : seq14ac002535g4g5.tfa.psignal.gff3
+\begin{Verbatim}[fontsize=\tiny]
+seq14	PepSignal	SO:0000318	175	175	0.024083	-	.	ID=SO:0000318:seq14.0;
+seq14	PepSignal	SO:0000318	188	188	0.000151	+	.	ID=SO:0000318:seq14.1;
+\end{Verbatim}
 
 \paragraph{Filtering input information}
 
